--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~8.2.14",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "body-parser": "~1.19.0",
+    "express": "~4.17.1",
+    "multer":"1.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.20",
